tests/invalid_inputs/sema/int_member_access.cpp

void f() {
	int a;
	a.some_member;
}
